--- a/style.css
+++ b/style.css
@@ -188,11 +188,12 @@
         display: flex;
        flex-direction: column;
        justify-content: center;
+       padding-top: 24.35px;
        padding-bottom: 20px;
        padding-left: 18px;
       }
       .product_name{
-        margin-top: 24.35px;
+        
         font-weight: 400;
         font-size: 13px;
         line-height: 16px;
@@ -297,6 +298,10 @@
 
 
 
+
+      }
+
+      @media(max-width: 767){
 
       }
         
