--- a/style.css
+++ b/style.css
@@ -177,8 +177,18 @@
    background: #F8F8F8;
    display: flex;
    flex-direction: column;
+   position: relative;
   }
+
+  .product_item:hover::after{
+    content:url(img/Hover.svg);
+    position: absolute;
+    
+  }
+
+
  .product_item_content{
+  
    display: flex;
    flex-direction: column;
    justify-content: center;
@@ -217,7 +227,7 @@
    margin-bottom: 60.5px;
   }
 
- .browse_all_button{
+  .browse_all_button{
    font-weight: 400;
    font-size: 16px;
    line-height: 19px;
@@ -226,7 +236,225 @@
    background: none;
    width: 212px;
    height: 48px;
+   transition: background-color 1s;
   }
+  
+  .browse_all_button:hover{
+    background: #F16D7F;    
+  }
+
+  .browse_all_button:hover .button_text{
+    color: #F8F8F8;
+  }
+
+  .footer_wrapper{
+    background-color: rgba(34, 34, 36, 1);
+  }
+
+  .features{
+    padding-top: 104px;
+    padding-bottom: 104px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
+  }
+
+  .feature_item{
+    width: 360px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
+  }
+
+  .feature_heading{
+    font-weight: 400;
+    font-size: 19.96px;
+    line-height: 24px;
+    color: #FBFBFB;
+    padding-top: 25px;
+  }
+
+  .feature_text{
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    color: #FBFBFB;
+    padding-top: 16px;
+
+  }
+
+  .subscribe{
+    min-height: 448px;
+    background-image: url(img/photo_subscribe.jpg);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;   
+  }
+
+  .author_info{
+    margin-top: 97px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+
+  .author_text{
+    
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+    color: #222224;
+    margin-top: 30px;
+    width: 360px;
+  }
+
+  .subscribe_info{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+  }
+
+  .subscribe_title{
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 167.2%;
+    text-align: center;
+    color: #222224;
+  }
+
+  .subscribe_text{
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 167.2%;
+    text-align: center;
+    color: #222224;
+  }
+
+  .text-field__group {
+    margin-top: 32px;
+    display: flex;
+    height: 49px;
+  }
+  /* кнопка */
+  .text-field__btn {
+    height: 50px;
+    width: 100px;
+    display: inline-block;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #FFFFFF;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    background-color: #F16D7F;
+    transition: background-color .15s ease-in-out;
+    position: relative;
+    border-top-right-radius: 1.5rem;
+    border-bottom-right-radius: 1.5rem;
+    border-left-width: 0;
+    border: none;
+  }
+  .text-field__btn:hover {
+    background-color: #E05C6E;
+  }
+  .text-field__input {
+    width: 256px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    vertical-align: middle;
+    color: #222224;
+    border-top-left-radius: 1.5rem;
+    border-bottom-left-radius: 1.5rem;
+    position: relative;
+    z-index: 3;
+    background-color: #E1E1E1;
+    border: none;
+  }
+
+  .contacts_info{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 235px;
+    margin-right: 230px;
+    min-height: 79px;
+    align-items: center;
+  }
+  
+  .copyright{
+    
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #FBFBFB;
+    display: flex;
+    align-items: center;
+  }
+
+  .social_icons{
+    display: flex;
+    gap: 7.3px;
+    align-items: center;
+  }
+
+  .icon  {
+    width: 32px;
+    fill: #E1E1E1;
+  }
+
+  .icon:hover path {
+    fill: #F16D7F;
+  }
+
+  .social_icon_background{
+    width: 32px;
+    height: 31px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 1s;
+    
+  }
+
+  .social_icon{
+    fill: black
+  }
+
+
+
+  .social_icon_background:hover{
+
+   background-color: #F16D7F;
+
+  }
+
+  .social_icon_background:hover .social_icon path{
+    fill:white; 
+
+  }
+
+
+
+ 
+  
+
+
 
  @media(max-width: 1024px) {
     .page{
@@ -275,8 +503,8 @@
      background: white;
      grid-template-columns: repeat(2, 1fr);
      gap: 16px;
-     padding-left: 16px;
-     padding-right: 16px;
+     margin-left: 16px;
+     margin-right: 16px;
     }
 
     .product_item_content{
@@ -287,6 +515,37 @@
      margin-top: 33px;
      margin-bottom: 71px;
     }
+
+    .features{
+      padding-top: 48px;
+      padding-bottom: 64px;
+      gap: 48px;
+      align-content: center;
+      flex-direction: column;
+    }
+
+    .subscribe{
+      min-height: 614px;
+      flex-direction: column;
+      padding-bottom: 140px;
+    }
+
+    
+    .subscribe_info{
+      margin-top: 48px;
+      margin-bottom: 27px;
+    }
+
+    .contacts_info{
+      
+      margin-left: 32px;
+      margin-right: 32px;
+    }
+
+
+
+
+
   }
 
   @media(max-width: 767px){
@@ -316,6 +575,104 @@
      line-height: 25px;
     }
 
+    .header__checkbox {
+      position: absolute;
+      visibility: hidden;
+      left: -9999999px;
+    }
+    
+    .header__checkbox:checked~.mobile-menu {
+      right: 0;
+    }
+
+    .sales_menu {
+      position: absolute;
+      top: 75px;
+      right: -232px;
+      z-index: 1;
+      -webkit-transition: right 0.6s;
+      transition: right 0.6s;
+      width: 232px;
+      background: #FFFFFF;
+      -webkit-box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+      box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+      padding: 32px;
+      -webkit-box-sizing: border-box;
+      box-sizing: border-box;
+    }
+
+    .mobile-menu__link-site {
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -ms-flex-pack: distribute;
+      justify-content: space-around;
+      background-color: #e8e8e8;
+      padding: 8px;
+      border-radius: 10px;
+      margin-bottom: 24px;
+      display: none;
+    }
+
+    .mobile-menu__heading {
+      font-style: normal;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 17px;
+      color: #000000;
+    }
+    
+    .mobile-menu__link {
+      font-style: normal;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 17px;
+      color: #6F6E6E;
+    }
+    
+    .mobile-menu__link:hover {
+      color: #F16D7F;
+    }
+    
+    .mobile-menu__title {
+      font-style: normal;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 17px;
+      color: #F16D7F;
+    }
+    
+    .mobile-menu__list {
+      list-style-type: none;
+      padding-left: 21px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      gap: 11px;
+      margin-top: 12px;
+    }
+    
+    .mobile-menu__box {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      gap: 20px;
+      margin-top: 24px;
+    }
+    
+
+   
+
+
+
     .sale_content{
      grid-template-columns: repeat(1, 1fr);
      gap: 32px;
@@ -338,14 +695,60 @@
     padding-top: 65px;
      grid-template-columns: repeat(1, 1fr);
      gap: 16px;
-     margin-left: 16px;
-     margin-right: 16px;
+     margin-left: 8px;
+     margin-right: 8px;
     }
 
     .products_footer{
       margin-top: 41px;
       margin-bottom: 85px;
      }
+
+    .features{
+      padding-top: 48px;
+      padding-bottom: 81px;
+      gap: 47px;
+    }
+
+    .feature_item{
+      width: 350px;        
+    }
+
+    .feature_heading{
+      padding-top: 27px;
+    }
+
+    .feature_text{
+      padding-top: 15px;  
+    }
+
+    .subscribe{
+      min-height: 550px;
+      flex-direction: column;
+      padding-bottom: 110px;
+    }
+
+    .author_info{
+      margin-top: 64px;
+    }
+
+    .subscribe_info{
+      margin-top: 59px;
+      margin-bottom: 22px;
+    }
+
+    .subscribe_text{
+      font-size: 15px;
+    }
+
+    .contacts_info{
+      height: 143px;
+      padding-top: 43px;
+      padding-bottom: 10px;
+      flex-direction: column-reverse;
+      gap: 40px;
+      
+    }
 
   }
         
