link hover in burger

--- a/style.css
+++ b/style.css
@@ -99,6 +99,9 @@ body {
   color: #6F6E6E;
   padding-left: 21px;
 }
+.burger__nav__link__link:hover {
+  color: #F16D7F;
+}
 
 .top__info {
   padding-left: calc(50% - 800px);
