--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ body {
   color: #6F6E6E;
   padding-left: 21px;
 }
-.burger__nav__link__link:hover {
+.burger__nav__link:hover {
   color: #F16D7F;
 }
 
